package com.example.sagivproject.dialogs;

import android.app.Dialog;
import android.os.Bundle;
import android.widget.Button;
import android.widget.EditText;
import android.widget.TextView;
import android.widget.Toast;

import androidx.annotation.Nullable;
import androidx.core.os.BundleCompat;

import com.example.sagivproject.R;
import com.example.sagivproject.bases.BaseDialog;
import com.example.sagivproject.models.EmergencyContact;
import com.example.sagivproject.utils.Validator;

import javax.inject.Inject;

import dagger.hilt.android.AndroidEntryPoint;

/**
 * A dialog fragment for adding a new emergency contact or editing an existing one.
 * <p>
 * This dialog provides input fields for the contact's first name, last name, and phone number.
 * It uses the {@link Validator} utility to ensure the input data is correct before submitting
 * it through the {@link AddEmergencyContactListener}.
 * </p>
 */
@AndroidEntryPoint
public class EmergencyContactDialog extends BaseDialog {
    private static final String ARG_CONTACT = "arg_contact";

    /**
     * Utility for validating contact information.
     */
    @Inject
    Validator validator;

    private AddEmergencyContactListener listener;
    private EmergencyContact contactToEdit;

    /**
     * Constructs a new AddEmergencyContactDialog.
     */
    @Inject
    public EmergencyContactDialog() {
    }

    /**
     * Sets the listener for contact submission events.
     *
     * @param listener The listener to set.
     */
    public void setListener(AddEmergencyContactListener listener) {
        this.listener = listener;
    }

    /**
     * Sets the initial data for the dialog.
     *
     * @param contact  The {@link EmergencyContact} to edit, or null to add a new one.
     * @param listener The listener for handling the result.
     */
    public void setData(EmergencyContact contact, AddEmergencyContactListener listener) {
        Bundle args = new Bundle();
        if (contact != null) {
            args.putSerializable(ARG_CONTACT, contact);
        }
        setArguments(args);
        this.listener = listener;
    }

    @Override
    public void onCreate(@Nullable Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        if (getArguments() != null) {
            contactToEdit = BundleCompat.getSerializable(getArguments(), ARG_CONTACT, EmergencyContact.class);
        }
    }

    @Override
    protected int getLayoutResId() {
        return R.layout.dialog_add_emergency_contact;
    }

    @Override
    protected void setupViews(Dialog dialog) {
        TextView tvTitle = dialog.findViewById(R.id.tv_dialog_contact_title);
        EditText etFirstName = dialog.findViewById(R.id.et_dialog_contact_first_name);
        EditText etLastName = dialog.findViewById(R.id.et_dialog_contact_last_name);
        EditText etPhone = dialog.findViewById(R.id.et_dialog_contact_phone);
        Button btnSave = dialog.findViewById(R.id.btn_dialog_save_contact);
        Button btnCancel = dialog.findViewById(R.id.btn_dialog_cancel_contact);

        if (contactToEdit != null) {
            tvTitle.setText(R.string.edit_emergency_contact);
            btnSave.setText(R.string.save);
            etFirstName.setText(contactToEdit.getFirstName());
            etLastName.setText(contactToEdit.getLastName());
            etPhone.setText(contactToEdit.getPhoneNumber());
        } else {
            tvTitle.setText(R.string.add_emergency_contact);
            btnSave.setText(R.string.add);
        }

        btnSave.setOnClickListener(v -> {
            String fName = etFirstName.getText().toString().trim();
            String lName = etLastName.getText().toString().trim();
            String phone = etPhone.getText().toString().trim();

            if (!areAllFieldsValid(fName, lName, phone, etFirstName, etLastName, etPhone)) {
                return;
            }

            if (listener != null) {
                // Create a new instance instead of modifying contactToEdit to ensure DiffUtil detects the change
                EmergencyContact contact = new EmergencyContact();
                if (contactToEdit != null) {
                    contact.setId(contactToEdit.getId());
                }
                contact.setFirstName(fName);
                contact.setLastName(lName);
                contact.setPhoneNumber(phone);
                listener.onContactSubmit(contact);
            }
            dismiss();
        });

        btnCancel.setOnClickListener(v -> dismiss());
    }

    @Override
    public void onDestroyView() {
        super.onDestroyView();
        contactToEdit = null;
    }

    /**
     * Validates all input fields in the dialog.
     *
     * @return true if all fields are valid.
     */
    private boolean areAllFieldsValid(String fName, String lName, String phone, EditText firstNameEdt, EditText lastNameEdt, EditText phoneEdt) {
        if (fName.isEmpty() || lName.isEmpty() || phone.isEmpty()) {
            Toast.makeText(requireContext(), "נא למלא את כל השדות", Toast.LENGTH_SHORT).show();
            return false;
        }

        if (validator.isNameNotValid(fName)) {
            firstNameEdt.requestFocus();
            Toast.makeText(requireContext(), "שם פרטי חייב להכיל לפחות 2 תווים", Toast.LENGTH_LONG).show();
            return false;
        }

        if (validator.isNameNotValid(lName)) {
            lastNameEdt.requestFocus();
            Toast.makeText(requireContext(), "שם משפחה חייב להכיל לפחות 2 תווים", Toast.LENGTH_LONG).show();
            return false;
        }

        if (validator.isPhoneNotValid(phone)) {
            phoneEdt.requestFocus();
            Toast.makeText(requireContext(), "מספר הטלפון אינו תקין", Toast.LENGTH_LONG).show();
            return false;
        }

        return true;
    }

    /**
     * Interface for listening to contact submission events.
     */
    public interface AddEmergencyContactListener {
        /**
         * Called when the contact details are submitted and valid.
         *
         * @param contact The contact object.
         */
        void onContactSubmit(EmergencyContact contact);
    }
}
