@startuml
class dialogs.FullImageDialog {
- Drawable imageDrawable
+ void setImage(Drawable)
+ void onCreate(Bundle)
# boolean shouldSetTransparentBackground()
# int getLayoutResId()
# void setupViews(Dialog)
}


class dialogs.ConfirmDialog {
- {static} String ARG_TITLE
- {static} String ARG_MESSAGE
- {static} String ARG_CONFIRM_TEXT
- {static} String ARG_CANCEL_TEXT
- Runnable onConfirm
+ void setData(String,String,String,String,Runnable)
# int getLayoutResId()
# void setupViews(Dialog)
}


class dialogs.EmergencyContactDialog {
- {static} String ARG_CONTACT
~ Validator validator
- AddEmergencyContactListener listener
- EmergencyContact contactToEdit
+ void setListener(AddEmergencyContactListener)
+ void setData(EmergencyContact,AddEmergencyContactListener)
+ void onCreate(Bundle)
# int getLayoutResId()
# void setupViews(Dialog)
+ void onDestroyView()
- boolean areAllFieldsValid(String,String,String,EditText,EditText,EditText)
}


interface dialogs.EmergencyContactDialog$AddEmergencyContactListener {
~ void onContactSubmit(EmergencyContact)
}

class dialogs.EditForumCategoryDialog {
- {static} String ARG_CATEGORY
- ForumCategory category
- EditForumCategoryDialogListener listener
+ void setData(ForumCategory,EditForumCategoryDialogListener)
+ void onCreate(Bundle)
# int getLayoutResId()
# void setupViews(Dialog)
}


interface dialogs.EditForumCategoryDialog$EditForumCategoryDialogListener {
~ void onUpdateCategory(String)
}



bases.BaseDialog <|-- dialogs.FullImageDialog
bases.BaseDialog <|-- dialogs.ConfirmDialog
bases.BaseDialog <|-- dialogs.EmergencyContactDialog
dialogs.EmergencyContactDialog +.. dialogs.EmergencyContactDialog$AddEmergencyContactListener
bases.BaseDialog <|-- dialogs.EditForumCategoryDialog
dialogs.EditForumCategoryDialog +.. dialogs.EditForumCategoryDialog$EditForumCategoryDialogListener
@enduml